--- a/topic_modeling.ipynb
+++ b/topic_modeling.ipynb
@@ -2,20 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "6da97071-3ae3-4a0c-afb0-579417427fa6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bunkatech.topic_modeling import topic_modeling\n",
     "import pandas as pd\n",
-    "import bamboolib"
+    "import bamboolib\n",
+    "import plotly\n",
+    "\n",
+    "from bunkatech.topic_modeling import topic_modeling\n",
+    "from bunkatech.nested_topic_modeling import nested_topic_modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "32e78a0f-2f1c-4f4d-accd-2b2e44a00acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/imdb_movies.csv\", index_col=[0])\n",
+    "df = df[df[\"description\"].notna()]\n",
+    "docs = list(df[\"description\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fe77233f-b8ef-40f5-96db-7990bfa0f883",
+   "id": "a9ef49dc-8816-4cbc-a7e9-68592d5d6fd2",
    "metadata": {},
    "outputs": [
     {
@@ -26,10 +41,10 @@
       "Embeddings..\n",
       "Reducing the vectors..\n",
       "UMAP(angular_rp_forest=True, metric='cosine', n_components=5, n_neighbors=10, verbose=True)\n",
-      "Thu Feb 10 10:52:39 2022 Construct fuzzy simplicial set\n",
-      "Thu Feb 10 10:52:39 2022 Finding Nearest Neighbors\n",
-      "Thu Feb 10 10:52:39 2022 Building RP forest with 10 trees\n",
-      "Thu Feb 10 10:52:41 2022 metric NN descent for 13 iterations\n",
+      "Thu Feb 10 14:15:43 2022 Construct fuzzy simplicial set\n",
+      "Thu Feb 10 14:15:43 2022 Finding Nearest Neighbors\n",
+      "Thu Feb 10 14:15:43 2022 Building RP forest with 10 trees\n",
+      "Thu Feb 10 14:15:44 2022 metric NN descent for 13 iterations\n",
       "\t 1  /  13\n",
       "\t 2  /  13\n",
       "\t 3  /  13\n",
@@ -43,14 +58,14 @@
       "\t 11  /  13\n",
       "\t 12  /  13\n",
       "\tStopping threshold met -- exiting after 12 iterations\n",
-      "Thu Feb 10 10:53:55 2022 Finished Nearest Neighbor Search\n",
-      "Thu Feb 10 10:54:03 2022 Construct embedding\n"
+      "Thu Feb 10 14:16:13 2022 Finished Nearest Neighbor Search\n",
+      "Thu Feb 10 14:16:15 2022 Construct embedding\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d68f04465df4b2991292427add3d210",
+       "model_id": "7ff9bc604934436bba4a31fe7f0dd3a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Feb 10 10:54:30 2022 Finished embedding\n",
+      "Thu Feb 10 14:16:25 2022 Finished embedding\n",
       "Create Clusters...\n",
       "Extract Terms...\n"
      ]
@@ -74,22 +89,53 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 3000/3000 [01:48<00:00, 27.72it/s]\n"
+      "100%|███████████████████████████████████████| 3000/3000 [00:33<00:00, 90.23it/s]\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/imdb_movies.csv\", index_col=[0])\n",
-    "df = df[df[\"description\"].notna()]\n",
-    "docs = list(df[\"description\"])\n",
-    "\n",
     "topics = topic_modeling(docs, topic_number=15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a06224e-6a15-4374-a2a1-c605ff8b08ea",
+   "metadata": {},
+   "source": [
+    "#### Nested Topic Modeling"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d21737-d166-4b02-84c1-3bec226ed90f",
+   "id": "b54ccd6e-8547-4c3f-90bf-945fb4448567",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings..\n"
+     ]
+    }
+   ],
+   "source": [
+    "treemap, sankey = nested_topic_modeling(\n",
+    "    df,\n",
+    "    text_var=\"description\",\n",
+    "    index_var=\"imdb\",\n",
+    "    sample_size=9000,\n",
+    "    sample_terms=3000,\n",
+    "    embeddings_model = 'sbert'\n",
+    ")\n",
+    "plotly.offline.plot(sankey, auto_open=True, filename=\"saved_graph/sankey.html\")\n",
+    "plotly.offline.plot(treemap, auto_open=True, filename=\"saved_graph/treemap.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aec8ec6-6eb1-48bb-9186-bc87c88a4573",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -97,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ab68bc-c21c-4fa6-9eb8-423662401656",
+   "id": "b98d471f-1286-4aa7-993c-26a6a6ecb2d3",
    "metadata": {},
    "outputs": [],
    "source": []
