--- a/topic_modeling.ipynb
+++ b/topic_modeling.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b54ccd6e-8547-4c3f-90bf-945fb4448567",
    "metadata": {},
    "outputs": [
@@ -115,12 +115,104 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings..\n"
+      "Embeddings..\n",
+      "Territory embedding..\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d2f3e521572d4e7c84b19ee219d29386",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/282 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reducing the vectors..\n",
+      "UMAP(angular_rp_forest=True, metric='cosine', n_components=5, n_neighbors=10, verbose=True)\n",
+      "Thu Feb 10 14:30:46 2022 Construct fuzzy simplicial set\n",
+      "Thu Feb 10 14:30:46 2022 Finding Nearest Neighbors\n",
+      "Thu Feb 10 14:30:46 2022 Building RP forest with 10 trees\n",
+      "Thu Feb 10 14:30:46 2022 NN descent for 13 iterations\n",
+      "\t 1  /  13\n",
+      "\t 2  /  13\n",
+      "\t 3  /  13\n",
+      "\t 4  /  13\n",
+      "\t 5  /  13\n",
+      "\t 6  /  13\n",
+      "\t 7  /  13\n",
+      "\t 8  /  13\n",
+      "\t 9  /  13\n",
+      "\tStopping threshold met -- exiting after 9 iterations\n",
+      "Thu Feb 10 14:30:59 2022 Finished Nearest Neighbor Search\n",
+      "Thu Feb 10 14:30:59 2022 Construct embedding\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e95972b69c9d4706a4c53d29d636d4a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epochs completed:   0%|            0/500 [00:00]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Feb 10 14:31:06 2022 Finished embedding\n",
+      "Extract Terms...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████| 3000/3000 [00:29<00:00, 102.11it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'saved_graph/treemap.html'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "treemap, sankey = nested_topic_modeling(\n",
+    "treemap, sankey, sunburst = nested_topic_modeling(\n",
     "    df,\n",
     "    text_var=\"description\",\n",
     "    index_var=\"imdb\",\n",
@@ -129,7 +221,8 @@
     "    embeddings_model = 'sbert'\n",
     ")\n",
     "plotly.offline.plot(sankey, auto_open=True, filename=\"saved_graph/sankey.html\")\n",
-    "plotly.offline.plot(treemap, auto_open=True, filename=\"saved_graph/treemap.html\")"
+    "plotly.offline.plot(treemap, auto_open=True, filename=\"saved_graph/treemap.html\")\n",
+    "plotly.offline.plot(sunburst, auto_open=True, filename=\"saved_graph/sunburst.html\")"
    ]
   },
   {
