--- a/demo_basic.ipynb
+++ b/demo_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5ba31ec1-7a2b-4fda-92c8-5133a77b1fb2",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "667e4f15-0e60-4b27-a477-67aaa2f370c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('/Volumes/OutFriend/shaping_ai/data_minus_neutre.csv')\n",
     "data = data.sample(3000, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "979834da-9619-418f-93f6-52e01f941fcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4123     2019\n",
+       "4315     2016\n",
+       "12783    2016\n",
+       "7307     2016\n",
+       "6497     2018\n",
+       "         ... \n",
+       "11285    2019\n",
+       "5234     2017\n",
+       "5902     2017\n",
+       "11469    2018\n",
+       "10269    2019\n",
+       "Name: date, Length: 3000, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.date"
    ]
   },
   {
