--- a/examples/demo_basic.ipynb
+++ b/examples/demo_basic.ipynb
@@ -22,6 +22,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "7b645b3f-f6fd-42e7-b87f-bb49ea0817cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"/Users/charlesdedampierre/Desktop/BUNKA Project/bunkatech\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "844db572-9606-45f2-948c-5c336a68ecc5",
    "metadata": {},
    "outputs": [],
@@ -30,8 +41,7 @@
     "from bunkatech import BasicSemantics\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    " \n",
-    "    \n",
+    "\n",
     "data = pd.read_csv('../data/imdb.csv', index_col = [0])\n",
     "data = data.sample(2000, random_state = 42)"
    ]
@@ -254,7 +264,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.14"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d06d64b3148607a2a08430b29b5af322539c9ef12b4d143317d61d0929cc5500"
+   }
   }
  },
  "nbformat": 4,
