fix relative path

--- a/examples/demo_basic.ipynb
+++ b/examples/demo_basic.ipynb
@@ -21,21 +21,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "7b645b3f-f6fd-42e7-b87f-bb49ea0817cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"/Users/charlesdedampierre/Desktop/BUNKA Project/bunkatech\")"
+    "sys.path.append(\"../../bunkatech\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "844db572-9606-45f2-948c-5c336a68ecc5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/charlesdedampierre/Desktop/BUNKA Project/bunkatech/.venv/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from bunkatech import BasicSemantics\n",
