--- a/examples/demo_bunka.ipynb
+++ b/examples/demo_bunka.ipynb
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "29bf9a2a-b1f5-4ac7-8d69-371e1f6eb3b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"/Users/charlesdedampierre/Desktop/BUNKA Project/bunkatech\")"
+    "sys.path.append(\"../../bunkatech\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "844db572-9606-45f2-948c-5c336a68ecc5",
    "metadata": {},
    "outputs": [
