--- a/examples/demo_nested_topic_modeling.ipynb
+++ b/examples/demo_nested_topic_modeling.ipynb
@@ -18,6 +18,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5eb0450a-a548-4ddf-9c7e-5ea9eedb6ce5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../../bunkatech\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "6b3c2441-3c5c-4cae-9ea0-f7147efec4c5",
    "metadata": {},
@@ -11921,7 +11932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.14"
   }
  },
  "nbformat": 4,
