--- a/examples/demo_topic_modeling.ipynb
+++ b/examples/demo_topic_modeling.ipynb
@@ -18,6 +18,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "75459d97-9760-4c3c-9b22-7ab89648e41c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../../bunkatech\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "95d9823f-b469-4ef1-b52c-fa6f4846e795",
    "metadata": {},
@@ -14360,7 +14371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.14"
   }
  },
  "nbformat": 4,
