--- a/examples/demo_trends.ipynb
+++ b/examples/demo_trends.ipynb
@@ -18,6 +18,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f09a926e-a0ad-40a7-bda1-8d8d017c5d1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../../bunkatech\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "9b5ff9b9-0afa-4f2c-b9e9-41489876a4e1",
    "metadata": {},
@@ -1971,7 +1982,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.14"
   }
  },
  "nbformat": 4,
