changes for first release

--- a/examples/demo_semantic_networks.ipynb
+++ b/examples/demo_semantic_networks.ipynb
@@ -32,26 +32,24 @@
    "execution_count": 2,
    "id": "5391d4a9-9adb-46e9-9b48-677296216ac1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/charlesdedampierre/Desktop/BUNKA Project/bunkatech/.venv/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from bunkatech.networks import SemanticNetworks\n",
     "import pandas as pd\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     " \n",
-    "\n",
     "data = pd.read_csv('../data/imdb.csv', index_col = [0])\n",
     "data = data.sample(2000, random_state = 42)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01ae6944-48f9-4170-ad6a-98409616442c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -91,100 +89,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                   | 0/1991 [00:00<?, ?it/s]2022-11-18 17:55:06,719 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
-      "2022-11-18 17:55:06,766 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
-      "2022-11-18 17:55:06,805 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
-      "2022-11-18 17:55:06,806 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
-      "2022-11-18 17:55:06,845 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
-      "2022-11-18 17:55:06,882 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
-      "  0%|                                                                         | 1/1991 [00:05<3:06:49,  5.63s/it]2022-11-18 17:55:06,955 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
-      "2022-11-18 17:55:06,979 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
-      "100%|███████████████████████████████████████████████████████████████████████| 1991/1991 [00:08<00:00, 241.43it/s]\n",
-      "2022-11-18 17:55:09,827 - INFO : Load pretrained SentenceTransformer: all-MiniLM-L6-v2\n",
-      "2022-11-18 17:55:10,119 - INFO : Use pytorch device: cpu\n",
-      "Batches: 100%|███████████████████████████████████████████████████████████████████| 63/63 [00:01<00:00, 33.84it/s]\n",
-      "2022-11-18 17:55:11,992 - INFO : Load pretrained SentenceTransformer: all-MiniLM-L6-v2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start Embedding...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-11-18 17:55:12,206 - INFO : Use pytorch device: cpu\n",
-      "2022-11-18 17:55:12,207 - INFO : CUDA is not available. Start 4 CPU worker\n",
-      "2022-11-18 17:55:12,207 - INFO : Start multi-process pool on devices: cpu, cpu, cpu, cpu\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "UMAP(n_components=5, verbose=True)\n",
-      "Fri Nov 18 17:55:21 2022 Construct fuzzy simplicial set\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fri Nov 18 17:55:23 2022 Finding Nearest Neighbors\n",
-      "Fri Nov 18 17:55:24 2022 Finished Nearest Neighbor Search\n",
-      "Fri Nov 18 17:55:25 2022 Construct embedding\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epochs completed: 100%| █████████████████████████████████████████████████████████████████████████ 500/500 [00:01]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fri Nov 18 17:55:28 2022 Finished embedding\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "  0%|                                                                                 | 0/1991 [00:00<?, ?it/s]2023-04-27 11:43:23,798 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
+      "2023-04-27 11:43:23,799 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
+      "2023-04-27 11:43:23,804 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
+      "2023-04-27 11:43:23,817 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
+      "2023-04-27 11:43:23,818 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
+      "2023-04-27 11:43:23,819 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
+      "2023-04-27 11:43:23,820 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
+      "2023-04-27 11:43:23,821 - INFO : loaded 'en_core_web_sm' spaCy language pipeline\n",
+      "100%|█████████████████████████████████████████████████████████████████████| 1991/1991 [00:07<00:00, 269.67it/s]\n"
      ]
     }
    ],
@@ -193,8 +106,8 @@
     "                        text_var = 'description',\n",
     "                        index_var = 'imdb',\n",
     "                        extract_terms=True,\n",
-    "                        terms_embedding=True,\n",
-    "                        docs_embedding=True,\n",
+    "                        terms_embedding=False,\n",
+    "                        docs_embedding=False,\n",
     "                        sample_size_terms=2000,\n",
     "                        terms_limit=2000,\n",
     "                        terms_ents=False,\n",
@@ -223,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a35cc340-fdba-41ce-a621-3469bfed2d2d",
    "metadata": {},
    "outputs": [
@@ -231,88 +144,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing transition probabilities: 100%|███████████████████████████████████| 404/404 [00:00<00:00, 12899.07it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Computing transition probabilities: 100%|████████████████████████████████████| 419/419 [00:00<00:00, 3025.04it/s]\n",
-      "\n",
-      "Generating walks (CPU: 1):   0%|          | 0/1 [00:00<?, ?it/s]\n",
-      "Generating walks (CPU: 2):   0%|          | 0/1 [00:00<?, ?it/s]\n",
-      "Generating walks (CPU: 1): 100%|██████████| 1/1 [00:00<00:00, 12.41it/s]\n",
-      "Generating walks (CPU: 2): 100%|██████████| 1/1 [00:00<00:00, 12.64it/s]\n",
-      "Generating walks (CPU: 5):   0%|          | 0/1 [00:00<?, ?it/s]\n",
-      "Generating walks (CPU: 3): 100%|██████████| 1/1 [00:00<00:00, 12.50it/s]\n",
-      "Generating walks (CPU: 4): 100%|██████████| 1/1 [00:00<00:00, 12.72it/s]\n",
-      "Generating walks (CPU: 6): 100%|██████████| 1/1 [00:00<00:00, 12.77it/s]\n",
-      "Generating walks (CPU: 7): 100%|██████████| 1/1 [00:00<00:00, 12.80it/s]\n",
-      "Generating walks (CPU: 10): 100%|██████████| 1/1 [00:00<00:00, 12.93it/s]"
+      "Computing transition probabilities: 100%|██████████████████████████████████| 404/404 [00:00<00:00, 8212.73it/s]\n",
+      "Generating walks (CPU: 1): 100%|██████████| 1/1 [00:00<00:00, 20.67it/s]\n",
+      "Generating walks (CPU: 2): 100%|██████████| 1/1 [00:00<00:00, 20.64it/s]\n",
+      "Generating walks (CPU: 3): 100%|██████████| 1/1 [00:00<00:00, 20.80it/s]\n",
+      "Generating walks (CPU: 4): 100%|██████████| 1/1 [00:00<00:00, 20.70it/s]\n",
+      "Generating walks (CPU: 5): 100%|██████████| 1/1 [00:00<00:00, 20.91it/s]\n",
+      "Generating walks (CPU: 6): 100%|██████████| 1/1 [00:00<00:00, 20.95it/s]\n",
+      "Generating walks (CPU: 7): 100%|██████████| 1/1 [00:00<00:00, 20.02it/s]\n",
+      "Generating walks (CPU: 8): 100%|██████████| 1/1 [00:00<00:00, 19.81it/s]\n",
+      "Generating walks (CPU: 9): 100%|██████████| 1/1 [00:00<00:00, 20.68it/s]\n",
+      "Generating walks (CPU: 10): 100%|██████████| 1/1 [00:00<00:00, 20.91it/s]\n"
      ]
     }
    ],
@@ -332,8 +174,16 @@
     "                    edge_size=0.5,\n",
     "                    height=2000,\n",
     "                    width=2000,\n",
-    "                    template=\"plotly_dark\")"
+    "                    template=\"plotly_white\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3ad9ae4-b906-4a5d-b7e6-5d4d49fb68ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -345,44 +195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "94d3b5f0-35a1-4bff-b6e2-e4489a2ac261",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'filename.html'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -416,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
